Use File.toURI() to handle paths that may have spaces in them